Update generated content

--- a/home.html
+++ b/home.html
@@ -202,32 +202,59 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
+    "title": "Thị trường mua bán \"key\" IELTS sôi động sát ngày chuyển sang thi máy",
+    "content": "Thị trường mua bán \"key\" IELTS đang trở nên sôi động khi kỳ thi này sắp chuyển sang hình thức thi máy. Các \"key\" được chào bán với giá từ 500.000 đồng đến hàng chục triệu đồng trên mạng xã hội, khiến nhiều thí sinh lớp 12 tìm kiếm cơ hội đạt điểm số cao hơn. Tuy nhiên, việc mua bán này không đảm bảo kết quả thi và phản ánh thực trạng học vì điểm số trong hệ thống giáo dục Việt Nam. Các chuyên gia cũng nhấn mạnh rằng điều này ảnh hưởng tiêu cực đến những thí sinh nghiêm túc, trong khi việc thi máy được kỳ vọng sẽ cải thiện tính bảo mật của đề thi.",
+    "link": "https://dantri.com.vn/giao-duc/thi-truong-mua-ban-key-ielts-soi-dong-sat-ngay-chuyen-sang-thi-may-20250314003758239.htm",
+    "cat": "giao-duc",
     "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "importance": 8,
+    "question": "Tại sao thị trường mua bán \"key\" IELTS lại sôi động trước kỳ thi chuyển sang thi máy?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Bởi nhiều thí sinh muốn đạt điểm cao hơn",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Vì các trung tâm dạy tiếng Anh quảng cáo",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Để tiết kiệm thời gian ôn tập",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "text": "Vì đề thi khó hơn trước",
         "correct": false
       },
       {
-        "text": "Chăm sóc trẻ em",
+        "text": "Vì bạn bè khuyến khích mua key",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "answers": [
+      {
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "correct": true
+      },
+      {
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "correct": false
+      },
+      {
+        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "correct": false
+      },
+      {
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -287,28 +314,32 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Già hóa dân số",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Tỷ lệ sinh tăng",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Thiếu lao động trẻ",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -1238,28 +1269,28 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
     "answers": [
       {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
         "correct": true
       },
       {
-        "text": "Vì tiêm vaccine là bắt buộc.",
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
         "correct": false
       },
       {
-        "text": "Để giảm cân.",
+        "text": "Vì không thích kết quả thẩm mỹ.",
         "correct": false
       },
       {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -1292,28 +1323,28 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
     "answers": [
       {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
         "correct": true
       },
       {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "text": "Vì tiêm vaccine là bắt buộc.",
         "correct": false
       },
       {
-        "text": "Vì không thích kết quả thẩm mỹ.",
+        "text": "Để giảm cân.",
         "correct": false
       },
       {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -1431,33 +1462,6 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
-    "answers": [
-      {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
-        "correct": true
-      },
-      {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
-        "correct": false
-      },
-      {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
-        "correct": false
-      },
-      {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -1507,6 +1511,33 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "answers": [
+      {
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "correct": false
+      },
+      {
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
@@ -2532,37 +2563,6 @@
     ]
   },
   {
-    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
-    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
-    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
-    "answers": [
-      {
-        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
-        "correct": true
-      },
-      {
-        "text": "Khuyến khích sử dụng điện một cách tự do",
-        "correct": false
-      },
-      {
-        "text": "Thiết lập quy định mới về sử dụng điện",
-        "correct": false
-      },
-      {
-        "text": "Đánh giá chất lượng điện năng",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về điện năng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Suzuki Swift sắp trở lại Việt Nam, nhập khẩu Nhật Bản",
     "content": "Mẫu xe Suzuki Swift thế hệ thứ 4 sẽ trở lại thị trường Việt Nam và được nhập khẩu trực tiếp từ Nhật Bản, dự kiến ra mắt vào cuối quý II năm 2025. Các đại lý hiện đang nhận cọc từ khách hàng và xe đã về cảng để làm thủ tục thông quan. So với phiên bản trước, Swift mới có một số cải tiến về thiết kế, đặc biệt là khoang lái, mặc dù kích thước tổng thể gần như không thay đổi.",
     "link": "https://vnexpress.net/suzuki-swift-sap-tro-lai-viet-nam-nhap-khau-nhat-ban-4860834.html",
@@ -2589,6 +2589,37 @@
       },
       {
         "text": "Đầu quý IV năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam': Sử dụng điện tiết kiệm, an toàn và đúng cách",
+    "content": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' được tổ chức bởi Tổng công ty Điện lực miền Nam (EVNSPC) nhằm tuyên truyền về việc sử dụng điện tiết kiệm, an toàn và đúng cách. Lễ phát động cuộc thi diễn ra vào ngày 11-3-2025, đánh dấu kỷ niệm 50 năm thành lập ngành điện miền Nam và 50 năm giải phóng miền Nam, thống nhất đất nước. Cuộc thi không chỉ nhằm nâng cao nhận thức của người dân về việc tiết kiệm điện mà còn góp phần vào an ninh năng lượng quốc gia.",
+    "link": "https://tuoitre.vn/cuoc-thi-clip-50-nam-toa-sang-mien-nam-su-dung-dien-tiet-kiem-an-toan-va-dung-cach-20250313151048279.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cuộc thi clip '50 năm - Tỏa sáng miền Nam' có mục đích gì?",
+    "answers": [
+      {
+        "text": "Tuyên truyền sử dụng điện tiết kiệm, an toàn và đúng cách",
+        "correct": true
+      },
+      {
+        "text": "Khuyến khích sử dụng điện một cách tự do",
+        "correct": false
+      },
+      {
+        "text": "Thiết lập quy định mới về sử dụng điện",
+        "correct": false
+      },
+      {
+        "text": "Đánh giá chất lượng điện năng",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về điện năng",
         "correct": false
       }
     ]
