Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Diva Thanh Lam: \"Tôi và chồng không kiểm soát nhau, đã tính đến đám cưới\"",
+    "content": "Diva Thanh Lam hiện tại đã có nhiều thay đổi trong quan điểm về tình yêu và cuộc sống ở tuổi 56. Trong một buổi phỏng vấn, chị chia sẻ rằng mối quan hệ với chồng bác sĩ Bùi Tiến Hùng không có sự kiểm soát lẫn nhau và cả hai đã nghĩ đến việc tổ chức đám cưới. Chị cũng nhấn mạnh tầm quan trọng của sự tự do và tôn trọng trong tình yêu, đồng thời bày tỏ cảm giác bình yên và hạnh phúc trong cuộc sống hiện tại.",
+    "link": "https://dantri.com.vn/giai-tri/diva-thanh-lam-toi-va-chong-khong-kiem-soat-nhau-da-tinh-den-dam-cuoi-20250313174215902.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Diva Thanh Lam và chồng có kế hoạch gì cho tương lai?",
+    "answers": [
+      {
+        "text": "Cả hai dự tính tổ chức đám cưới.",
+        "correct": true
+      },
+      {
+        "text": "Họ sẽ đi du lịch nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tập trung vào sự nghiệp âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Không có kế hoạch gì đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Antony ghi bàn, lập cú đúp kiến tạo ở Conference League",
     "content": "Trong trận lượt về vòng 1/8 Conference League, Antony đã có màn trình diễn xuất sắc giúp Real Betis đánh bại Guimaraes 4-0. Anh ghi một bàn và có hai pha kiến tạo, góp phần vào chiến thắng chung cuộc 6-2 của Betis. Antony đã thể hiện khả năng chơi bóng ấn tượng, với bốn bàn thắng và năm pha kiến tạo sau 10 trận cho Betis.",
     "link": "https://vnexpress.net/antony-ghi-ban-lap-cu-dup-kien-tao-o-conference-league-4861096.html",
@@ -1565,28 +1592,28 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 8,
     "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
     "answers": [
       {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
         "correct": true
       },
       {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "text": "Chất xơ, đường, muối, protein",
         "correct": false
       },
       {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "text": "Vitamin D, canxi, sắt, đồng",
         "correct": false
       },
       {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
         "correct": false
       }
     ]
@@ -1619,28 +1646,28 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
     "cat": "suc-khoe",
-    "positivity": 8,
+    "positivity": 7,
     "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
     "answers": [
       {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
         "correct": true
       },
       {
-        "text": "Chất xơ, đường, muối, protein",
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
         "correct": false
       },
       {
-        "text": "Vitamin D, canxi, sắt, đồng",
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
         "correct": false
       },
       {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
@@ -1785,33 +1812,6 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
     "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
     "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
@@ -1834,6 +1834,33 @@
       },
       {
         "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
